# rampardos

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  grafana-dashboard.json  start.sh
.github/: FUNDING.yml
.github/workflows/: docker-build.yml
docs/superpowers/plans/: 2026-04-15-bytes-first-staticmap.md  2026-04-19-bytes-first-in-memory-pipeline.md
rampardos/: go.mod  go.sum
rampardos-render-worker/: README.md  package.json  render-worker.js
rampardos-render-worker-rs/: Cargo.toml  README.md  REPORT.md
rampardos-render-worker-rs/docker/: Dockerfile.dev
rampardos-render-worker-rs/scripts/: bench-in-docker.sh
rampardos-render-worker-rs/src/: fs_handler.rs  main.rs  protocol.rs
rampardos/cmd/server/: main.go  main_test.go
rampardos/internal/config/: config.go  config_test.go
rampardos/internal/fileutil/: atomic.go  atomic_test.go
rampardos/internal/handlers/: common.go  convert.go  datasets.go  fonts.go  marker_bytes_test.go  multi_static_map.go  settings.go  static_map.go  static_map_race_test.go  static_map_test.go  static_map_testhelpers_test.go  styles.go  templates.go  tile.go  tile_test.go
rampardos/internal/middleware/: auth.go  debug.go  logger.go  timeout.go
rampardos/internal/models/: circle.go  coordinate.go  hit_ratio.go  image_format.go  marker.go  multi_static_map.go  polygon.go  static_map.go  style.go
rampardos/internal/services/: cache_cleaner.go  cache_cleaner_unix.go  cache_cleaner_windows.go  cache_index.go  composite_image_cache.go  composite_image_cache_test.go  datasets.go  datasets_test.go  download_manager.go  expiry_queue.go  (+20 more)
(+56 files in other folders)
