[package]
name = "rampardos-render-worker-rs"
version = "0.1.0"
edition = "2021"
publish = false
description = "Rust render worker POC for rampardos — drop-in replacement for the Node render-worker that speaks the same stdin/stdout frame protocol."

[[bin]]
name = "rampardos-render-worker-rs"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[dependencies]
# Depends on the FileSource-callback fork of maplibre-native-rs. Pending
# upstream merge at https://github.com/maplibre/maplibre-native-rs. Pin the
# commit to avoid surprise rebases — bump together with the fork.
maplibre_native = { git = "https://github.com/jfberry/maplibre-native-rs", rev = "edfa5af", default-features = false, features = ["vulkan", "log"] }

# For local iteration against the sibling fork checkout, override via:
#   [patch."https://github.com/jfberry/maplibre-native-rs"]
#   maplibre_native = { path = "../../maplibre-native-rs-fork" }
# (either here or in a workspace-level .cargo/config.toml; uncommenting
# locally is fine, just don't commit the override.)
rusqlite = { version = "0.32", features = ["bundled"] }
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
png = "0.18"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
# Keep debug symbols in a separate file for perf/flamegraphs; strip from
# the binary for realistic production size numbers.
strip = "symbols"
